--- a/.github/workflows/CI-PR.yml
+++ b/.github/workflows/CI-PR.yml
@@ -5,15 +5,16 @@ on:
 concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
-build:
-  runs-on: ubuntu-22.04
-  steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js 22
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-    - name: Install Dependencies
-      run: npm ci
-    - name: Build
-      run: npm run build
+jobs:
+  build:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
