--- a/.github/workflows/CI-PR.yml
+++ b/.github/workflows/CI-PR.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           node-version: '22'
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
       - name: Build
         run: npm run build
