Add ci on push branch to master.

--- a/.github/workflows/CI-PR.yml
+++ b/.github/workflows/CI-PR.yml
@@ -2,6 +2,9 @@ name: CI PR
 on:
   pull_request:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
