--- a/.github/workflows/CI-branch.yaml
+++ b/.github/workflows/CI-branch.yaml
@@ -1,10 +1,10 @@
 name: CI PR
 on:
-  pull_request:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
 
-concurrency:
-  group: ${{ github.head_ref }}
-  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-22.04
