--- a/.github/workflows/CI-PR.yml
+++ b/.github/workflows/CI-PR.yml
@@ -6,6 +6,18 @@ concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
 jobs:
+  lint:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
   build:
     runs-on: ubuntu-22.04
     steps:
