--- a/package.json
+++ b/package.json
@@ -16,54 +16,57 @@
   "author": "Eusoff Hackers",
   "license": "ISC",
   "dependencies": {
-    "@boxyhq/saml-jackson": "^1.15.2",
-    "@fastify/caching": "^8.3.0",
-    "@fastify/cookie": "^9.1.0",
-    "@fastify/cors": "^8.4.0",
+    "@boxyhq/saml-jackson": "^1.27.0",
+    "@fastify/caching": "^8.4.0",
+    "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^8.5.0",
     "@fastify/formbody": "^7.4.0",
-    "@fastify/redis": "^6.1.1",
-    "@fastify/session": "^10.5.0",
+    "@fastify/redis": "^6.2.0",
+    "@fastify/session": "^10.9.0",
     "@fastify/type-provider-json-schema-to-ts": "^2.2.2",
     "@types/bcrypt": "^5.0.2",
-    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer": "^6.4.15",
     "abstract-cache": "^1.0.1",
     "abstract-cache-mongo": "^2.0.2",
     "abstract-cache-redis": "^2.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^5.0.0",
-    "connect-redis": "^7.1.0",
+    "connect-mongo": "^5.1.0",
+    "connect-redis": "^7.1.1",
     "crypto": "^1.0.1",
-    "csv": "^6.3.5",
+    "csv": "^6.3.9",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
-    "express-session": "^1.17.3",
-    "fastify": "^4.23.2",
-    "ioredis": "^5.3.2",
-    "json-schema-to-ts": "^2.9.2",
+    "express-session": "^1.18.0",
+    "fastify": "^4.28.1",
+    "ioredis": "^5.4.1",
+    "json-schema-to-ts": "^2.12.0",
     "mongodb": "^6.3.0",
     "mongodb-snapshot": "^1.4.1",
-    "mongoose": "^7.6.6",
-    "nodemailer": "^6.9.6",
+    "mongoose": "^7.7.0",
+    "nodemailer": "^6.9.14",
     "typescript": "^5.5.3",
-    "winston": "^3.10.0",
+    "winston": "^3.13.1",
     "winston-mongodb": "^5.1.1",
     "xkpasswd": "^1.0.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.5",
-    "@types/node": "^20.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "csv-parse": "^5.5.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.14.11",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "csv-parse": "^5.5.6",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "9.0.0",
-    "husky": "^8.0.0",
+    "eslint-plugin-no-relative-import-paths": "^1.5.5",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.4",
     "prettier": "3.0.3",
     "ts-node": "^10.9.2"
   },
