--- a/.github/workflows/CI-branch.yaml
+++ b/.github/workflows/CI-branch.yaml
@@ -6,6 +6,18 @@ on:
   workflow_dispatch:
 
 jobs:
+  lint:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - name: Install Dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
   build:
     runs-on: ubuntu-22.04
     steps:
@@ -13,7 +25,7 @@ jobs:
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
       - name: Install Dependencies
         run: npm ci
       - name: Build
