--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fastify/session": "^10.9.0",
     "@fastify/type-provider-json-schema-to-ts": "^2.2.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/json2csv": "^5.0.7",
     "@types/nodemailer": "^6.4.15",
     "abstract-cache": "^1.0.1",
     "abstract-cache-mongo": "^2.0.2",
@@ -42,6 +43,7 @@
     "express-session": "^1.18.0",
     "fastify": "^4.28.1",
     "ioredis": "^5.4.1",
+    "json-2-csv": "^5.5.4",
     "json-schema-to-ts": "^2.12.0",
     "mongodb": "^6.3.0",
     "mongodb-snapshot": "^1.4.1",
