--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "files": ["@types/environment.d.ts", "@types/fastify/index.d.ts"],
+  "ts-node": { "files": true, "require": ["tsconfig-paths/register"] },
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
     "baseUrl": "./",
@@ -20,7 +22,7 @@
     "lib": [
       "es6"
     ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
-    // "jsx": "preserve",                                /* Specify what JSX code is generated. */
+    // "jsx": "preserve",                    pnm             /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
     // "jsxFactory": "",                                 /* Specify the JSX factory function used when targeting React JSX emit, e.g. 'React.createElement' or 'h'. */
