--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-promise": "6.4",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
