chore(node): Add node watch. (#6)
* Add node watch.

* Remove typo on tsconfig.

* Change eslint promise version.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "files": ["@types/environment.d.ts", "@types/fastify/index.d.ts"],
+  "ts-node": { "files": true, "require": ["tsconfig-paths/register"] },
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
     "baseUrl": "./",
