--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "env-cmd -f ./.env.dev npx nodemon",
+    "dev": "env-cmd -f ./.env.dev nodemon --watch . ./App.ts",
     "built": "env-cmd -f ./.env.dev node build/App.js",
-    "build": "npx tsc",
+    "build": "tsc && tsc-alias",
     "prod": "env-cmd -f ./.env node build/App.js",
     "prepare": "cd .. && husky install backend/.husky",
     "script": "env-cmd -f ./.env.dev node",
@@ -49,8 +49,10 @@
     "mongodb-snapshot": "^1.4.1",
     "mongoose": "^7.7.0",
     "nodemailer": "^6.9.14",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3",
-    "winston": "^3.13.1",
+    "winston": "^3.10.0",
     "winston-mongodb": "^5.1.1",
     "xkpasswd": "^1.0.5"
   },
@@ -66,7 +68,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.5",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-promise": "6.4",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
