Change plugin folder.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "files": ["@types/environment.d.ts", "@types/fastify/index.d.ts"],
+  "include": ["v2/*", "App.ts", "@types/*"],
   "ts-node": { "files": true, "require": ["tsconfig-paths/register"] },
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
