--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "typescript.tsdk": "node_modules/typescript/lib",
   "[typescript]": {
@@ -31,8 +26,11 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
- "files.associations": {
+  "files.associations": {
     ".env.development.local": "properties"
   },
-
+  "files.exclude": {
+    "node_modules/": true,
+    "build/": true
+  }
 }
