--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongodb-snapshot": "^1.4.1",
     "mongoose": "^7.7.0",
     "nodemailer": "^6.9.14",
+    "sendgrid": "^5.2.3",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3",
